<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_settings">Settings</string>
    <string name="app_name">Ganko Bovinos</string>
    <string name="login_txt_user">Nombre de Usuario</string>
    <string name="login_txt_pass">Contraseña</string>
    <string name="title_section1">Inventario</string>
    <string name="title_section2">Registro Reproductivo</string>
    <string name="title_section3">Registro Productivo</string>
    <string name="title_section4">Plan de Vacunación</string>
    <string name="title_section5">Control Sanitario</string>
    <string name="title_section6">Registro de Manejo</string>
    <string name="title_section7">Gestión de Praderas</string>
    <string name="title_section8">Registro de Alimentación</string>
    <string name="title_section9">Cerrar Sesión</string>
    <string name="title_section10">Acerca de</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_fragment1">Fragment1</string>
    <string name="Bovino">Modulo Bovino</string>
    <string name="title_activity_splash">Ganko - Bovinos</string>
    <string name="title_activity_logueo">Logueo</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="title_activity_fragment4">Fragment4</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_fragment5">Fragment5</string>
    <string name="title_activity_ingresar_bovino">IngresarBovino</string>
    <string name="title_activity_registro">Registro</string>
    <string name="spinner_proposito">Proposito</string>
    <string name="title_activity_ingresar_bovino2">IngresarBovino2</string>
    <string name="title_activity_ingresar_regr">IngresarRegr</string>
    <string name="title_activity_registrar_vacuna1">RegistrarVacuna1</string>
    <string name="title_activity_registrar_vacuna2">RegistrarVacuna2</string>
    <string name="title_activity_detalle__plan_vacunacion">Detalle_PlanVacunacion</string>
    <string name="title_activity_ingresar_control">IngresarControl</string>
    <string name="title_activity_ingresar_control2">IngresarControl2</string>
    <string name="title_activity_ingresar_manejo">IngresarManejo</string>
    <string name="title_activity_ingresar_manejo2">IngresarManejo2</string>
    <string name="title_activity_detalle_reg_reproductivo2">DetalleRegReproductivo2</string>
    <string name="title_activity_detalle_inventario">DetalleInventario</string>
    <string name="title_activity_ingresar_ceba_d">Ingresar Ceba Dia</string>
    <string name="title_activity_ingresarpradera">IngresarPradera</string>
    <string name="title_activity_ingresarpradera2">IngresarPradera2</string>
    <string name="title_activity_detallecontrol">DetalleControl</string>
    <string name="title_activity_detalle_pradera">DetallePradera</string>
    <string name="title_activity_alimentacion">Alimentacion</string>
    <string name="title_activity_alimentacion2">Alimentacion2</string>
    <string name="title_activity_detalle_leche">DetalleLeche</string>
    <string name="title_activity_detalle_manejo">DetalleManejo</string>
    <string name="title_activity_detalle_alimentacion">DetalleAlimentacion</string>
    <string name="title_activity_acerca_de">Acerca_de</string>
    <string name="title_activity_actualizar_vacuna">Actualizar_vacuna</string>
    <string name="title_activity_detalle_repro_registro">detalleRepro_registro</string>
    <string name="title_activity_detalle_manejo_registro">detalleManejo_registro</string>
    <string name="title_activity_main_activity_scan">Scan</string>
    <string name="title_activity_detalle__aletas_vacunacion">Detalle_Aletas_vacunacion</string>


</resources>
